my project in database which connected to java

--- a/StudentManagementSystem/pom.xml
+++ b/StudentManagementSystem/pom.xml
@@ -15,11 +15,11 @@
     </properties>
     <dependencies>
         <!-- https://mvnrepository.com/artifact/io.zonky.test/embedded-postgres -->
+        <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
         <dependency>
-            <groupId>io.zonky.test</groupId>
-            <artifactId>embedded-postgres</artifactId>
-            <version>2.1.0</version>
-            <scope>test</scope>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.7.5</version>
         </dependency>
     </dependencies>
 
